2005-04-04  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Adapted to new API. Fixed Auto-Answer of incoming
	calls. Added back support to pause audio and video channels, to put
	calls on hold and to transfer calls. (Requires a patch that is not in
	OPAL CVS yet).

	* src/h323endpoint.cpp, src/h323endpoint.h, src/sipendpoint.cpp,
	src/sipendpoint.h: Fixed Auto-Answer and Do Not Disturb.

	* src/pcssendpoint.cpp, src/pcssendpoint.h: Removed unuseful code and
	reorganised handling of incoming calls.

	* src/pref_window.cpp: Force the presence of a realm for 
	SIP authentication.

	* src/urlhandler.cpp: Added back call transfer.

	* src/main_window.cpp: Removed video support for now.

	* help/C/gnomemeeting.xml, help/fr/gnomemeeting.xml: Applied patch
	from Stefan Bruens for docbook compliance.

2005-03-25  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp, src/videograbber.cpp: Do not update
	the video sliders if the driver returns values of zero for all
	settings, instead reuse the former values. Thanks to
	schorpp   _@_   schorpp.dyndns.dk.

	* src/vfakeio.cpp, src/vfakeio.h: Added GetParameters function that
	returns 0 for all settings.

2005-03-21  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed inversion of whiteness and brightness
	settings when using the sliders thanks to 
	schorpp _AT_ schorpp.dyndns.dk.

2005-03-11  Damien Sandras  <dsandras@gnome.org>

	* src/pref_window.cpp, src/accounts.cpp: Added support to specify 
	the realm when registering.

2005-03-07  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Updated pwlib requirement and removed erroneous
	requirement on the debug versions of the libraries.

2005-03-06  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp, stunclient.h: Added PSyncPoint to make
	sure that SetSTUNServer has been called when STUN support
	is enabled.

2005-03-06  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Enable silence detection by default.
