@@ -1,3 +1,9 @@
+2005-04-06  Damien Sandras  <dsandras@gnome.org>
+
+	* lib/stats_drawing_area.c, src/main_window.cpp, src/endpoint.cpp:
+	Applied patch from Stefan Bruens to optimize the code, and added
+	preliminary hack for roster.
+	
 2005-04-04  Damien Sandras  <dsandras@gnome.org>
 
 	* src/endpoint.cpp: Adapted to new API. Fixed Auto-Answer of incoming
